support text input fields

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html5>
 <meta charset="UTF-8"></meta>
 <html>
+<head>
+<style>
+span {white-space: pre-wrap;}
+</style></head>
 <body><div id="root"></div></body>
 <script src="rts.js"></script>
 <script src="jAgda.Prelude.js"></script>
