many improvements, see CHANGELOG

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
 <style>
 span {white-space: pre-wrap;}
+.horizontal {display: inline;}
+.vertical {display: block;}
+.label {padding: 5px;}
+button {margin: 2px;}
+div {padding-bottom: 10px;}
 </style></head>
 <body><div id="root"></div></body>
 <script src="rts.js"></script>
