refactor rts.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ span {white-space: pre-wrap;}
 .horizontal {display: inline;}
 .vertical {display: block;}
 .label {padding: 5px;}
+.invalid {background-color: red;}
 button {margin: 2px;}
 div {padding-bottom: 10px;}
 </style></head>
