--- a/index.html
+++ b/index.html
@@ -12,7 +12,5 @@ button {margin: 2px;}
 div {padding-bottom: 10px;}
 </style></head>
 <body><div id="root"></div></body>
-<script src="rts.js"></script>
-<script src="jAgda.Prelude.js"></script>
-<script src="jAgda.Reactive.js"></script>
+<script src="all.js"></script>
 </html>
