make self-contained html

--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html5>
-<meta charset="UTF-8"></meta>
-<html>
-<head>
-<style>
+<!DOCTYPE html5><meta charset="UTF-8"></meta><html><head><style>
 span {white-space: pre-wrap;}
 .horizontal {display: inline;}
 .vertical {display: block;}
@@ -10,7 +6,4 @@ span {white-space: pre-wrap;}
 .invalid {background-color: red;}
 button {margin: 2px;}
 div {padding-bottom: 10px;}
-</style></head>
-<body><div id="root"></div></body>
-<script src="all.js"></script>
-</html>
+</style></head><body><div id="root"></div></body><script>
