--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html5><meta charset="UTF-8"></meta><html><head><style>
-span {white-space: pre-wrap;}
-.horizontal {display: inline;}
-.vertical {display: block;}
-.label {padding: 5px;}
-.invalid {background-color: red;}
-button {margin: 2px;}
-div {padding-bottom: 10px;}
-</style></head><body><div id="root"></div></body><script>
+<!DOCTYPE html5>
+<meta charset="UTF-8"></meta>
+<html><head><style>
+.s1>*{display:inline}
+.s2>*{display:block}
+.s3{padding:5px;white-space:pre-wrap}
+.s4{background-color:red}
+button,select{margin:2px}
+div{padding-bottom:10px}
+</style></head><body onload="e3(t0)" id="k1">
+</body><script>
